--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -1,21 +1,21 @@
 <div class="page-header">
-  <h2>New Store</h2>
+  <h2>Edit Store</h2>
 </div>
 
-<%= form_for([@user, @user.build_store]) do |f| %>
+<%= form_for(@user.store) do |f| %>
 
   <div class="form-group">
     <%= f.label :name %><br />
-    <%= f.text_field :name, class: "form-control" %>
+    <%= f.text_field :name, autofill: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :default_value %>
-    <%= f.text_field :default_value, class: "form-control", placeholder: "1" %>
+    <%= f.text_field :default_value, autofill: true, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :description %><br />
-    <%= f.text_area :description, class: "form-control" %>
+    <%= f.text_area :description, autofill: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
@@ -23,3 +23,4 @@
   </div>
 
 <% end %>
+
