--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,92 +1,53 @@
 <h1>Accounts</h1>
 <table class="table table-hover">
-
-  <%-# Table for store -%>
-
-  <% if @user.admin %>
-    <tr>
+  <tr>
+    <% if @user.admin %>
       <th>User</th>
-      <th>Value</th>
-      <th></th>
-      <th></th>
-    </tr>
-    <% @accounts.each do |account| %>
-      <% ptrans = PointsTransaction.find_by(account_id: account.id, approved: false) %>
-      <tr>
-        <td>
-          <strong><%= link_to account.user.username,
-                              user_url(account.user_id) %></strong>
-        </td>
-        <td><%= account.value %></td>
-        <td>
-          <% if ptrans %>
-            <%= link_to "Approve Request",
-                        user_account_points_transaction_path(current_user.id,
-                                                             account.id,
-                                                             ptrans.id),
-                        class: "btn btn-success",
-                        :method => :patch %>
-          <% else %>
-            <%= link_to "Give point(s)",
-                        user_account_points_transactions_path(account.user.id,
-                                                              account.id),
-                        class: "btn btn-primary",
-                        :method => :post %>
-          <% end %>
-        </td>
-        <td>
-          <%= link_to "View Account",
-                      user_account_path(@user.id, account.id),
-                      class: "btn btn-primary" %>
-          <%= link_to "Close Account",
-                      user_account_path(@user.id, account.id),
-                      method: :delete,
-                      class: "btn btn-danger",
-                      data: { confirm: "Are you sure?" } %>
-        </td>
-      </tr>
-    <% end %>
-
-  <%-# Table for user -%>
-
-  <% else %>
-    <tr>
+    <% else %>
       <th>Store</th>
-      <th>Value</th>
-      <th></th>
-      <th></th>
-    </tr>
-    <% @accounts.each do |account| %>
-      <% ptrans = PointsTransaction.find_by(account_id: account.id, approved: false) %>
-      <tr>
-        <td>
-          <strong><%= link_to account.store.name,
-                              user_url(account.store_id) %></strong>
-        </td>
-        <td><%= account.value %></td>
-        <td>
-          <% if ptrans %>
-            <button type="button" class="btn btn-primary" disabled="disabled">
-              Awaiting Approval
-            </button>
-          <% else %>
-            <%= link_to "Request point(s)",
-                        user_account_points_transactions_path(account.user.id,
-                                                              account.id),
-                        class: "btn btn-primary",
-                        :method => :post %>
-          <% end %>
-        </td>
-        <td>
-          <%= link_to "View Account",
-                      user_account_path(@user.id, account.id),
-                      class: "btn btn-primary" %>
-          <%= link_to "Close Account",
-                      user_account_path(@user.id, account.id),
-                      method: :delete,
-                      class: "btn btn-danger",
-                      data: { confirm: "Are you sure?" } %>
-        </td>
     <% end %>
+    <th>Value</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+  <% @accounts.each do |account| %>
+    <% ptrans = PointsTransaction.find_by(account_id: account.id, approved: false, trans_type: "credit") %>
+    <% reward_ptrans = PointsTransaction.find_by(account_id: account.id, approved: false, trans_type: "debit") %>
+    <tr>
+      <td>
+        <% if @user.admin %>
+          <strong><%= link_to account.user.username, user_url(account.user_id) %></strong>
+        <% else %>
+          <strong><%= link_to account.store.name, store_url(account.store_id) %></strong>
+        <% end %>
+      </td>
+      <td><%= account.value %></td>
+      <td>
+        <% if @user.admin %>
+          <% if ptrans %>
+            <%= link_to "Approve Request", user_account_points_transaction_path(current_user.id, account.id, ptrans.id), class: "btn btn-success", :method => :patch %>
+          <% else %>
+            <%= link_to "Give point(s)", user_account_points_transactions_path(account.user.id, account.id, :trans_type => "credit"), class: "btn btn-primary", :method => :post %>
+          <% end %>
+          <% if reward_ptrans %>
+            <%= link_to "Approve Reward", user_account_points_transaction_path(current_user.id, account.id, reward_ptrans.id), class: "btn btn-success", :method => :patch %>
+          <% end %>
+        <% else %>
+          <% if ptrans %>
+            <button type="button" class="btn btn-primary" disabled="disabled">Awaiting Approval</button>
+          <% else %>
+            <%= link_to "Request point(s)", user_account_points_transactions_path(account.user.id, account.id, :trans_type => "credit"), class: "btn btn-primary", :method => :post %>
+          <% end %>
+        <% end %>
+      </td>
+      <td>
+        <%= link_to "Redeem Points", store_rewards_url(account.store_id), class: "btn btn-primary" %>
+      </td>
+      <td>
+        <%= link_to "View Account", user_account_path(@user.id, account.id), class: "btn btn-primary" %>
+        <%= link_to "Close Account", user_account_path(@user.id, account.id), method: :delete, class: "btn btn-danger", data: { confirm: "Are you sure?" } %>
+      </td>
+    </tr>
   <% end %>
 </table>
