--- a/app/views/rewards/edit.html.erb
+++ b/app/views/rewards/edit.html.erb
@@ -1,12 +1,8 @@
 <div class="page-header">
-  <h2>Edit Store</h2>
+  <h2>Edit Reward</h2>
 </div>
 
-<%= link_to "Add a new reward", new_store_reward_path(@user.store), class: "btn btn-primary" %>
-
-<hr />
-
-<%= form_for(@user.store) do |f| %>
+<%= form_for(params[:id]) do |f| %>
 
   <div class="form-group">
     <%= f.label :name %><br />
@@ -14,9 +10,10 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :default_value %>
-    <%= f.text_field :default_value, autofill: true, class: "form-control" %>
+    <%= f.label :value %>
+    <%= f.text_field :value, autofill: true, class: "form-control" %>
   </div>
+
   <div class="form-group">
     <%= f.label :description %><br />
     <%= f.text_area :description, autofill: true, class: "form-control" %>
