--- a/app/views/rewards/edit.html.erb
+++ b/app/views/rewards/edit.html.erb
@@ -2,7 +2,7 @@
   <h2>Edit Reward</h2>
 </div>
 
-<%= form_for(params[:id]) do |f| %>
+<%= form_for([current_user.store, @reward]) do |f| %>
 
   <div class="form-group">
     <%= f.label :name %><br />
