--- a/app/views/rewards/index.html.erb
+++ b/app/views/rewards/index.html.erb
@@ -15,6 +15,7 @@
     <td>
       <% if current_user.admin %>
         <%= link_to "Edit this reward", edit_store_reward_path(current_user.store, reward), class: "btn btn-primary" %>
+        <%= link_to "Delete this reward", store_reward_path(current_user.store, reward), class: "btn btn-danger", method: :delete, data: { confirm: "Are you sure?" } %>
       <% else %>
         <% if PointsTransaction.find_by(account_id: @account.id, approved: false, trans_type: "debit") %>
           <button type="button" class="btn btn-primary" disabled="disabled">Awaiting Approval</button>
