--- a/app/views/rewards/index.html.erb
+++ b/app/views/rewards/index.html.erb
@@ -6,6 +6,7 @@
     <th>Desreiption</th>
     <th>Value</th>
     <th></th>
+    <th></th>
   </tr>
 <% @rewards.each do |reward| %>
   <tr>
@@ -13,14 +14,37 @@
     <td><%= reward.description %></td>
     <td><%= reward.value %></td>
     <td>
+      <% if @user && @account.value >= reward.value %>
+        <%= link_to "Redeem #{@user.username}'s points for this reward",
+                    user_account_points_transactions_path(current_user, @account, :trans_type => "debit", :reward_id => reward.id),
+                    class: "btn btn-primary",
+                    :method => :post %>
+      <% elsif @user %>
+        <button type"button" class="btn btn-primary" disabled="disabled">
+          Not enough points
+        </button>
+      <% end %>
+    </td>
+    <td>
       <% if current_user.admin %>
-        <%= link_to "Edit this reward", edit_store_reward_path(current_user.store, reward), class: "btn btn-primary" %>
-        <%= link_to "Delete this reward", store_reward_path(current_user.store, reward), class: "btn btn-danger", method: :delete, data: { confirm: "Are you sure?" } %>
+        <%= link_to "Edit this reward",
+          edit_store_reward_path(current_user.store, reward),
+          class: "btn btn-primary" %>
+        <%= link_to "Delete this reward",
+          store_reward_path(current_user.store, reward),
+          class: "btn btn-danger",
+          method: :delete,
+          data: { confirm: "Are you sure?" } %>
       <% else %>
         <% if PointsTransaction.find_by(account_id: @account.id, approved: false, trans_type: "debit") %>
-          <button type="button" class="btn btn-primary" disabled="disabled">Awaiting Approval</button>
+          <button type="button" class="btn btn-primary" disabled="disabled">
+            Awaiting Approval
+          </button>
         <% elsif @account.value >= reward.value %>
-          <%= link_to "Redeem points for this reward", user_account_points_transactions_path(current_user.id, @account.id, :trans_type => "debit", :reward_id => reward.id), class: "btn btn-primary", :method => :post %>
+          <%= link_to "Redeem points for this reward",
+                      user_account_points_transactions_path(current_user.id, @account.id, :trans_type => "debit", :reward_id => reward.id),
+                      class: "btn btn-primary",
+                      :method => :post %>
         <% else %>
           <button type="button" class="btn btn-primary" disabled="disabled">Not enough points</button>
         <% end %>
