Changed the location of the add new reward button to the rewards list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,10 @@
             <ul class="nav navbar-nav">
               <li><%= link_to 'Store List', stores_url %></li>
               <% if user_signed_in? %>
-                <li><%= link_to 'My Accounts', user_accounts_url(current_user.id) %></li>
+                <li><%= link_to 'My Accounts', user_accounts_path(current_user.id) %></li>
+                <% if current_user.admin %>
+                  <li><%= link_to 'My Rewards', store_rewards_path(current_user.store) %></li>
+                <% end %>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
