--- a/app/views/rewards/index.html.erb
+++ b/app/views/rewards/index.html.erb
@@ -1,5 +1,9 @@
 <h2>Rewards</h2>
 
+<% if current_user.admin %>
+  <%= link_to "Add a new reward", new_store_reward_path(current_user.store), class: "btn btn-primary" %>
+<% end %>
+
 <table class="table table-hover">
   <tr>
     <th>Name</th>
